@@ -13,6 +13,7 @@
   -improved Water Temple:
     -split up the chests
     -tried to model the reqs including small keys
+  -added small key reqs to Shadow Temple
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
